@@ -61,6 +61,9 @@ Drupal 7.50, xxxx-xx-xx (development version)
 - Made it possible to use any PHP callable in Ajax form callbacks, form API
   form-building functions, and form API wrapper callbacks (API addition:
   https://www.drupal.org/node/2761169).
+- Added support for full UTF-8 (emojis, Asian symbols, mathematical symbols) on
+  MySQL and other database drivers when the site and database are configured to
+  allow it (https://www.drupal.org/node/2761183).
 
 Drupal 7.44, 2016-06-15
 -----------------------
